전체 컨텐츠 정렬 수정 중

--- a/assets/01-html/05-textLevel/24-ruby_element.html
+++ b/assets/01-html/05-textLevel/24-ruby_element.html
@@ -18,12 +18,12 @@
 		</p>
 	</section>
 
-	<section class="indent mt_xl">
-		<h2 class="ml_mn">&lt;ruby&gt; 의 세부 요소</h2>
+	<section class="indent mt_xxl">
+		<h2 class="ml_mn">ruby 의 세부 요소</h2>
 
-		<article class="txt_ex mt_m">
+		<article class="txt_ex mt_l">
 			<h3>&lt;rp&gt; 요소</h3>
-			<p class="indent">
+			<p class="mt_ms indent">
 				<code>&lt;rp&gt;</code> 요소는 루비 주석(ruby annotation)을 지원하지 않는 브라우저에서만 표시될 문자를 정의할 때 사용합니다.<br>
 				<code>&lt;rp&gt;</code> 요소는 <code>&lt;ruby&gt;</code> 요소 내부에 위치하며, <code>&lt;rt&gt;</code> 요소와 함께 사용합니다.<br>
 				<code>&lt;rp&gt;</code> 요소는 보통 <code>&lt;rt&gt;</code> 요소를 감싸는 형태로 한 쪽에는 여는 괄호를 포함하며 다른 한 쪽에는 닫는 괄호를 포함하여,
@@ -31,41 +31,41 @@
 			</p>
 		</article>
 
-		<article class="txt_ex mt_m">
+		<article class="txt_ex mt_l">
 			<h3>&lt;rt&gt; 요소</h3>
-			<p class="indent">
+			<p class="mt_ms indent">
 				<code>&lt;rt&gt;</code> 요소는 루비 주석(ruby annotation)에서 발음이나 설명을 나타내는 윗 첨자를 정의할 때 사용합니다.
 			</p>
 		</article>
 
-		<article class="txt_ex mt_m">
+		<article class="txt_ex mt_l">
 			<h3>&lt;rb&gt; 요소</h3>
-			<p class="indent">
+			<p class="mt_ms indent">
 				<code>&lt;rb&gt;</code> 요소는 각 개별 텍스트를 구성 요소로 구분하는 데 사용합니다.<br>
 				<mark>Edge : No support(지원하지 않음)</mark>
 			</p>
 		</article>
 
-		<article class="txt_ex mt_m">
+		<article class="txt_ex mt_l">
 			<h3>&lt;rp&gt; 요소</h3>
-			<p class="indent">
+			<p class="mt_ms indent">
 				<code>&lt;rp&gt;</code> 요소는 루비 주석의 표시를 지원하지 않는 브라우저를 위한 백 괄호를 제공하는 데 사용됩니다.<br>
 				<mark>Edge : No support(지원하지 않음)</mark>
 			</p>
 		</article>
 
-		<article class="txt_ex mt_m">
+		<article class="txt_ex mt_l">
 			<h3>&lt;rtc&gt; 요소</h3>
-			<p class="indent">
+			<p class="mt_ms indent">
 				<code>&lt;rtc&gt;</code> 요소는 루비 주석에 대한 표시문자를 정의합니다.<br>
 				<mark>Firefox 만 지원</mark>
 			</p>
 		</article>
 	</section>
 
-	<section class="ol_lst mt_l sound_only">
-		<h3 class="sound_only">상세 설명</h3>
-		<ol>
+	<section class="ol_lst mt_xxl sound_only"><!-- sound_only -->
+		<h2>상세 설명</h2><!-- class="sound_only" -->
+		<ol class="indent mt_ms">
 			<li>루비 문자 태그</li>
 			<li><code>&lt;ruby&gt;</code>의 내용 중 rt 태그 내의 내용이 상단에 작게 표시됩니다.</li>
 			<li><code>&lt;rp&gt;</code> 내의 내용은 무시됩니다.</li>
