--- a/assets/01-html/06-embedded/02-img_element.html
+++ b/assets/01-html/06-embedded/02-img_element.html
@@ -48,14 +48,14 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;img src=&quot;URL&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 속성은 <code>&lt;img&gt;</code>요소에 필수입니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[alt] <span class="t_blue">&lt;img alt=&quot;이미지 대체 텍스트&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이미지를 보여줄 수 없을 때 해당 이미지를 대체할 텍스트를 명시합니다.<br>
 				이러한 alt 속성은 사용자가 느린 네트워크 환경이나 src 속성값의 오류,
 				시각 장애인용 스크린 리더의 사용 등 어떤 이유로든 사용자가 이미지를 볼 수 없을 때 이미지 대신 제공할 대체 정보를 제공합니다.
@@ -67,9 +67,9 @@
 			</ol>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[width], [height]</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;img width=&quot;이미지의 너비를 픽셀(pixel) 단위로 명시함&quot; height=&quot;이미지의 높이를 픽셀(pixel) 단위로 명시함&quot;&gt;</code><br>
 				이미지의 height 속성과 width 속성은 언제나 명시하는 것이 좋습니다.<br>
 				이 속성들이 명시되어 있으면 웹 페이지가 로드될 때 브라우저가 해당 이미지를 위한 적절한 공간을 남겨둘 수 있지만,
@@ -82,9 +82,9 @@
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[usemap] <span class="t_blue">&lt;img usemap=&quot;#맵이름&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;img&gt;</code> 요소의 usemap 속성은 클라이언트 사이드 이미지 맵(client-side image-map)으로 이미지를 명시합니다.<br>
 				usemap 속성은 <code>&lt;map&gt;</code> 요소의 name 속성과 결합하여, <code>&lt;img&gt;</code> 요소와 <code>&lt;map&gt;</code> 요소 사이의 관계를 생성합니다.<br>
 				만약 해당 <code>&lt;img&gt;</code> 요소가 <code>&lt;a&gt;</code>요소나 <code>&lt;button&gt;</code> 요소의 자손 요소(descendant element)이면 usemap 속성은 사용할 수 없습니다.
@@ -103,9 +103,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[ismap] <span class="t_blue">&lt;img ismap&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;img&gt;</code> 요소의 ismap 속성은 해당 이미지가 서버 사이드 이미지맵(server-side image map)의 일부인지 여부를 명시합니다.<br>
 				이 속성은 해당 <code>&lt;img&gt;</code> 요소가 유효한 href 속성값을 가지는 <code>&lt;a&gt;</code> 요소의 자손 요소인 경우에만 허용됩니다.<br>
 				ismap 속성은 불리언(boolean) 속성입니다.<br>
@@ -115,9 +115,9 @@
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[srcset] <span class="t_blue">&lt;img srcset=&quot;/images/img1.jpg 960w, /images/img2.jpg 575w&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 브라우저에 제시할(사용할) 이미지들과 그 이미지들의 원본 크기를 지정합니다.<br>
 				다양한 상황 (예 : 고해상도 디스플레이, 소형 모니터 등)에서 사용할 이미지<br>
 				<code>&lt;img&gt;</code> 요소의 srcset 속성은 각각 다른 환경에서 사용될 이미지 소스를 명시합니다.<br>
@@ -151,9 +151,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[sizes] <span class="t_blue">&lt;img sizes=&quot;(min-width: 960px) 50vw, (min-width: 575px) 75vw, 100vw&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				미디어조건과 그 조건에 해당하는 이미지의 ‘최적화 출력 크기’를 지정합니다.<br>
 				<code>&lt;img&gt;</code> 요소의 sizes 속성은 서로 다른 페이지 레이아웃에 대한 이미지 소스의 크기를 명시합니다.<br>
 				sizes 속성은 이미지 소스의 크기를 나타내는 하나 이상의 문자열을 콤마(,)로 결합한 리스트를 속성값으로 가집니다.<br>
@@ -263,9 +263,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[crossorigin] <span class="t_blue">&lt;img crossorigin=&quot;anonymous | use-credentials&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;canvas&gt;</code> 요소에 사용될 이미지에 교차 출처 접근(cross-origin access)을 허용하는 제3의 사이트(third-party site)로부터의 이미지 허용 여부를 명시합니다.
 			</p>
 			<ol class="ol_lst mt_s indent">
@@ -284,9 +284,9 @@
 			</ol>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[longdesc] <span class="t_blue">&lt;img longdesc=&quot;[html-longdesc]에 정의 된 이미지의 확장 된 설명에 대한 링크를 제공하는 URL&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;img&gt;</code> 요소의 longdesc 속성은 이미지에 대한 alt 속성의 설명이 부족한 경우 longdesc 속성을 제공하여 부가적인 설명을 제공하는 URL을 명시합니다.<br>
 				현재는 접근성 관련하여 이 속성보다는 다른방법으로 대체하는 것을 권장합니다.
 			</p>
