--- a/assets/01-html/06-embedded/03-map_element.html
+++ b/assets/01-html/06-embedded/03-map_element.html
@@ -34,7 +34,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;img name=&quot;이름&quot; id=&quot;name이름과 동일&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				필수 속성으로, 이미지맵의 이름을 명시합니다.
 			</p>
 		</article>
