--- a/assets/01-html/06-embedded/06-audio_element.html
+++ b/assets/01-html/06-embedded/06-audio_element.html
@@ -30,15 +30,15 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;audio src=&quot;URL&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				삽입할 오디오의 URL입니다.<br>
 				오디오 블록 내의 <code>&lt;source&gt;</code> 요소를 사용하여 포함할 오디오를 지정할 수 있습니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[autoplay] <span class="t_blue">&lt;audio autoplay&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 속성이 지정된 경우 오디오는 전체 오디오 파일의 다운로드가 완료될 때까지 기다리지 않고 자동으로 재생을 시작합니다.<br>
 				오디오(또는 오디오 트랙이 있는 비디오)를 자동으로 재생하는 사이트는 사용자에게 불편한 경험 일 수 있으므로 가능한 경우 피해야 합니다.<br>
 				자동 재생 기능을 제공해야 하는 경우 자동 재생 기능을 사용하도록 설정해야 합니다(사용자가 특별히 사용하도록 설정해야 합니다).<br>
@@ -46,30 +46,30 @@
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[controls] <span class="t_blue">&lt;audio controls&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 속성이 있으면 브라우저는 볼륨, 탐색, 재생 일시 중지 / 다시 시작 등 오디오 재생을 제어할 수있는 컨트롤을 제공합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[loop] <span class="t_blue">&lt;audio loop&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 속성이 지정된 경우 오디오의 끝 부분에 도달하면 자동으로 시작 부분으로 되돌아갑니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[muted] <span class="t_blue">&lt;audio muted&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				오디오가 처음에 소거 여부를 나타내는 Boolean 속성입니다. 기본값은 false 입니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[preload] <span class="t_blue">&lt;audio preload=&quot;none | metadata | auto&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				음악을 재생하기 전에 사전 로드할 정보나 콘텐츠의 크기를 브라우저에 알려줍니다.<br>
 				스펙에서는 기본값으로 metadata를 권장하지만 설정하지 않았다면 각 브라우저가 정한 기본값을 설정하게 됩니다.
 			</p>
