--- a/assets/01-html/06-embedded/12-object_element.html
+++ b/assets/01-html/06-embedded/12-object_element.html
@@ -44,37 +44,37 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[width], [height] <span class="t_blue">&lt;object width="너비" height="높이"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				객체의 너비와 높이를 명시합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;object name="이름"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;object&gt;</code> 요소의 이름을 명시합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[usemap] <span class="t_blue">&lt;object usemap="#맵이름"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				객체와 함께 사용될 클라이언트 사이드 이미지맵(client-side image-map)의 이름을 명시합니다.<br>
 				usemap 속성은 <code>&lt;map&gt;</code> 요소의 name 속성과 결합하여, <code>&lt;object&gt;</code> 요소와 <code>&lt;map&gt;</code> 요소 사이의 관계를 생성합니다.<br>
 				크롬, 오페라, 사파리는 지원하지 않음. IE, 파이어폭스만 지원.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[data] <span class="t_blue">&lt;object data="URL"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;object&gt;</code> 요소에서 사용할 리소스의 URL을 명시합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;object form="form id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;object&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함합니다.<br>
 				현재는 모든 브라우저에 지원하지 않습니다.
 			</p>
