--- a/assets/01-html/06-embedded/13-param_element.html
+++ b/assets/01-html/06-embedded/13-param_element.html
@@ -31,16 +31,16 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;param name="이름"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				매개변수의 이름을 명시합니다.
 				이 속성은 value 속성과 함께 사용하여 <code>&lt;object&gt;</code> 요소에 의해 호출되는 플러그인의 매개변수(parameter)를 명시합니다.
 				name 속성값에는 명시된 객체가 지원하는 이름이라면 어떠한 이름이라도 사용할 수 있습니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;param value="값"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				매개변수의 값을 명시합니다.
 				이 속성은 name 속성과 함께 사용하여 <code>&lt;object&gt;</code> 요소에 의해 호출되는 플러그인의 매개변수(parameter)를 명시합니다.
 				value 속성값에는 명시된 객체가 지원하는 값이라면 어떠한 값이라도 사용할 수 있습니다.
