--- a/assets/01-html/07-edits/01-del_element.html
+++ b/assets/01-html/07-edits/01-del_element.html
@@ -31,14 +31,14 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[cite] <span class="t_blue">&lt;del cite="URL"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				텍스트가 삭제된 이유에 대해서 알 수 있는 문서의 URL을 명시합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[datetime] <span class="t_blue">&lt;del datetime="YYYY-MM-DDThh:mm:ssTZD"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				텍스트가 삭제된 날짜와 시간을 명시합니다.<br>
 				이 속성은 요소의 시간과 날짜를 나타내며 선택적으로 시간 정보를 갖는 유효한 날짜 문자열이어야 합니다.<br>
 				만일 값이 선택적으로 시간 정보를 갖는 날짜 문자열로 파싱될 수 없다면, 요소는 관련된 타임스탬프를 소유하지 않게 됩니다.
