--- a/assets/01-html/08-table/09-th_element.html
+++ b/assets/01-html/08-table/09-th_element.html
@@ -40,40 +40,40 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[abbr] <span class="t_blue">&lt;th abbr="텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 요소의 abbr 속성은 헤더 셀 내부의 콘텐츠에 대한 짧은 설명을 명시합니다.<br>
 				일반 웹 브라우저에서는 해당 요소에 scope 속성을 명시해도 아무런 시각적 효과도 나타나지 않지만, 스크린 리더기와 같은 장치에서는 유용하게 사용될 수 있습니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[colspan] <span class="t_blue">&lt;th colspan="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 요소의 colspan 속성은 해당 헤더 셀이 확장될 열(column)의 개수를 명시합니다. 기본값은 1입니다.<br>
 				이때 colspan 속성값을 0으로 명시하면, 해당 셀은 자신이 포함된 열 그룹(colgroup)의 마지막 열까지 확장됩니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[rowspan] <span class="t_blue">&lt;th rowspan="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 요소의 rowspan 속성은 해당 헤더 셀(cell)이 확장될 행(row)의 개수를 명시합니다. 기본값은 1입니다.<br>
 				rowspan 속성값을 0으로 명시하면, 해당 셀은 자신이 포함된 테이블 영역(thead, tbody, tfoot)의 마지막 행까지 확장됩니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[headers] <span class="t_blue">&lt;th headers="header id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 요소의 headers 속성은 해당 헤더 셀과 연관된 하나 이상의 헤더 셀(header cell)을 명시합니다.<br>
 				header id값은 해당 헤더 셀과 연관된 헤더 셀(header cell)들의 id 속성값을 공백으로 구분한 리스트입니다.<br>
 				일반 웹 브라우저에서는 해당 요소에 headers 속성을 명시해도 시각적으로 어떠한 효과도 보여주지 않지만, 스크린 리더기와 같은 장치에서는 유용하게 사용됩니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[scope] <span class="t_blue">&lt;th scope="col | row | colgroup | rowgroup"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 요소의 scope 속성은 테이블에서 헤더 셀과 데이터 셀을 연결하는 방법을 명시합니다.<br>
 				일반 웹 브라우저에서는 해당 요소에 headers 속성을 명시해도 시각적으로 어떠한 효과도 보여주지 않지만, 스크린 리더기와 같은 장치에서는 유용하게 사용됩니다.
 			</p>
@@ -86,7 +86,7 @@
 		</article>
 	</section>
 
-	<figure class="img_figure indent mt_l">
+	<figure class="img_figure indent mt_xl">
 		<img src="/ukncs/images/html/uxkm_img_table_rowcol.svg" alt="html 요소 설명">
 		<figcaption>[table 요소의 부분 설명]</figcaption>
 	</figure>
