--- a/assets/01-html/09-forms/01-form_element.html
+++ b/assets/01-html/09-forms/01-form_element.html
@@ -33,7 +33,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[action] <span class="t_blue">&lt;form action="URL"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;form&gt;</code> 요소의 action 속성은 폼 데이터(form data)를 서버로 전송할 때 해당 데이터가 도착할 URL을 명시합니다.<br>
 				이 값은 <code>&lt;button&gt;</code> 또는 <code>&lt;input&gt;</code> 요소의 formaction 속성으로 대체될 수 있습니다.<br>
 				HTML5에서는 더 이상 <code>&lt;form&gt;</code> 요소에 반드시 action 속성을 명시할 필요가 없도록 변경되었습니다.
@@ -50,9 +50,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[method] <span class="t_blue">&lt;form method="get | post"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;form&gt;</code> 요소의 method 속성은 폼 데이터(form data)가 서버로 전송될 때 사용되는 HTTP 메소드를 명시합니다.<br>
 				속성값으로는 GET과 POST 두 가지 중 하나를 선택할 수 있습니다.
 			</p>
@@ -90,9 +90,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;form name="텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;form&gt;</code> 요소의 name 속성은 해당 폼(form)의 이름을 명시합니다.<br>
 				name 속성은 서버로 제출된 폼 데이터(form data)를 참조하기 위해 사용되거나, 자바스크립트에서 요소를 참조하기 위해 사용됩니다.<br>
 				XHTML에서는 name 속성을 더 이상 지원하지 않으므로, name 속성 대신 전역 속성인 id 속성을 사용해야 합니다.
@@ -115,9 +115,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[target] <span class="t_blue">&lt;form target="_self | _blank | _parent | _top | 프레임 이름"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;form&gt;</code> 요소의 target 속성은 폼 데이터(form data)를 서버로 전송한 후 받는 응답이 열릴 위치를 명시합니다.<br>
 				HTML 4.01에서는 <code>&lt;form&gt;</code> 요소의 target 속성을 지원하지 않았지만, HTML5부터는 지원하도록 변경되었습니다.<br>
 				HTML5에서는 프레임(frame)과 프레임셋(frameset)을 더 이상 지원하지 않습니다.<br>
@@ -165,9 +165,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[accept-charset] <span class="t_blue">&lt;form accept-charset="문자셋"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				서식 데이터(form data)를 서버로 전송 시 사용되는 하나 이상의 문자 인코딩 방식이 공백 문자(space)로 구분된 리스트입니다.<br>
 				<code>&lt;form&gt;</code> 요소의 accept-charset 속성은 폼 데이터(form data)를 서버로 전송 시 사용되는 문자 인코딩(character encoding) 방식을 명시합니다.<br>
 				accept-charset 속성의 기본값은 <code>&quot;UNKNOWN&quot;</code>으로 설정되며, 이 값은 <code>&lt;form&gt;</code> 요소가 포함되어 있는 HTML 문서의 문자 인코딩과 동일함을 나타냅니다.<br>
@@ -186,9 +186,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[enctype] <span class="t_blue">&lt;form enctype="application/x-www-form-urlencoded | multipart/form-data | text/plain"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;form&gt;</code> 요소의 enctype 속성은 폼 데이터(form data)가 서버로 전송될 때 해당 데이터가 인코딩되는 방법을 명시합니다.<br>
 				이 속성은 <code>&lt;form&gt;</code> 요소의 method 속성값이 <code>&quot;post&quot;</code>인 경우에만 사용할 수 있습니다.
 			</p>
@@ -219,9 +219,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[autocomplete] <i class="fab fa-html5"></i> <span class="t_blue">&lt;form autocomplete="on | off"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;form&gt;</code> 요소의 autocomplete 속성은 <code>&lt;form&gt;</code> 요소에서 자동 완성 기능을 사용할 지 여부를 명시합니다.<br>
 				autocomplete 속성값을 on으로 명시하면, 브라우저는 사용자가 이전에 입력했던 값들을 기반으로 사용자가 입력한 값과 비슷한 값들을 드롭다운 옵션으로 보여줍니다.<br>
 				이 속성을 사용하면 <code>&lt;form&gt;</code> 요소에서는 자동 완성 기능을 사용하면서 특정 <code>&lt;input&gt;</code> 요소에서는 자동 완성 기능을 사용하지 않거나 그 반대로 설정하는 것도 가능합니다.
@@ -254,9 +254,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[novalidate] <i class="fab fa-html5"></i> <span class="t_blue">&lt;form novalidate&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				기본적으로 novalidate 속성은 boolean attribute(블리언 속성)입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.<br>
 				이 불리언 속성은 양식을 제출 시(폼 데이터가 서버로 전송 시) 해당 데이터의 유효성을 검사하지 않음을 명시합니다.
