--- a/assets/01-html/09-forms/02-label_element.html
+++ b/assets/01-html/09-forms/02-label_element.html
@@ -46,7 +46,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[for] <span class="t_blue">&lt;label for="요소 id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;label&gt;</code> 요소의 for 속성은 레이블(label)과 결합될 요소를 명시합니다.
 			</p>
 		</article>
