--- a/assets/01-html/09-forms/03-input_element_part3.html
+++ b/assets/01-html/09-forms/03-input_element_part3.html
@@ -62,7 +62,7 @@
 		</article>
 
 		<!-- list -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[list] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input list="datalist id"&gt;</span></h3>
 			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소에서 사용하기 위해 미리 정의해 놓은 옵션들을 포함하고 있는 <code>&lt;datalist&gt;</code> 요소를 명시합니다.
@@ -83,7 +83,7 @@
 		</article>
 
 		<!-- max -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[max] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="date | datetime | datetime-local | month | number | range | time | week" max="숫자|날짜"&gt;</span></h3>
 			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 max 속성은 <code>&lt;input&gt;</code> 요소의 최대값을 명시합니다.<br>
@@ -119,7 +119,7 @@
 		</article>
 
 		<!-- min -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[min] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="date | datetime | datetime-local | month | number | range | time | week" max="숫자|날짜"&gt;</span></h3>
 			<p class="mt_ms">
 				min 속성은 <code>&lt;input&gt;</code> 요소의 최소값을 명시합니다.<br>
@@ -155,7 +155,7 @@
 		</article>
 
 		<!-- maxlength -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[maxlength] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input maxlength="숫자"&gt;</span></h3>
 			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소에서 허용되는 최대 문자수를 명시합니다(기본값은 524,288).
@@ -176,7 +176,7 @@
 		</article>
 
 		<!-- minlength -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[minlength] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input minlength="숫자"&gt;</span></h3>
 			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소에서 허용되는 최소 문자수를 명시합니다.
@@ -197,7 +197,7 @@
 		</article>
 
 		<!-- step -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[step] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="date | datetime | datetime-local | month | number | range | time | week" step="숫자"&gt;</span></h3>
 			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 태그의 step 속성은 <code>&lt;input&gt;</code> 요소에 입력할 수 있는 숫자들 사이의 간격을 명시합니다.<br>
@@ -222,7 +222,7 @@
 		</article>
 
 		<!-- multiple -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[multiple] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="email | file" multiple&gt;</span></h3>
 			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 multiple 속성은 <code>&lt;input&gt;</code> 요소에 사용자가 둘 이상의 값을 입력할 수 있음을 명시합니다.<br>
@@ -250,7 +250,7 @@
 		</article>
 
 		<!-- pattern -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[pattern] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input pattern="정규 표현식"&gt;</span></h3>
 			<p class="mt_ms">
 				pattern 속성은 폼 제출 시 <code>&lt;input&gt;</code> 요소의 값을 검사할 때 사용될 정규 표현식(regular expression)을 명시합니다.<br>
@@ -297,7 +297,7 @@
 		</article>
 
 		<!-- dirname -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[dirname] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input name="이름" dirname="이름.dir"&gt;</span></h3>
 			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 dirname 속성은 폼 데이터(form data)가 서버로 제출될 때
@@ -323,7 +323,7 @@
 		</article>
 
 		<!-- form -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input form="form id"&gt;</span></h3>
 			<p class="mt_ms">
 				해당 <code>&lt;input&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
@@ -349,7 +349,7 @@
 		</article>
 
 		<!-- formaction -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[formaction] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="submit | image" formaction="URL"&gt;</span></h3>
 			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 입력 데이터를 처리할 파일의 URL을 명시합니다.<br>
@@ -378,7 +378,7 @@
 		</article>
 
 		<!-- formenctype -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[formenctype] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="submit | image" formenctype="속성값"&gt;</span></h3>
 			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 해당 데이터가 인코딩(encoding)되는 방식을 명시합니다.<br>
@@ -422,7 +422,7 @@
 		</article>
 
 		<!-- formmethod -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[formmethod] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="submit | image" formenctype="get | post"&gt;</span></h3>
 			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 사용할 HTTP 메소드를 명시합니다.<br>
@@ -479,7 +479,7 @@
 		</article>
 
 		<!-- formnovalidate -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[formnovalidate] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="submit" formnovalidate&gt;</span></h3>
 			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 해당 데이터의 유효성 검사를 하지 않음을 명시합니다.<br>
@@ -511,7 +511,7 @@
 		</article>
 
 		<!-- formtarget -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[formtarget] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input formtarget="_blank | _self | _parent | _top | 프레임 이름"&gt;</span></h3>
 			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출된 후 받는 응답(response) 데이터를 어디에 표시할 지를 명시합니다.<br>
