--- a/assets/01-html/09-forms/04-button_element.html
+++ b/assets/01-html/09-forms/04-button_element.html
@@ -27,7 +27,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;button type="button | submit | reset"&gt;버튼명&lt;/button&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 버튼의 이름(name)을 명시합니다.<br>
 				기본적으로 <code>button</code>, <code>reset</code>, <code>submit</code>의 값들이 있습니다.
 			</p>
@@ -50,9 +50,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[name], [value], [disabled] <span class="t_blue">&lt;button name="해당 버튼의 이름(name)" value="텍스트" disabled&gt;버튼명&lt;/button&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code>의 <code>name</code>, <code>value</code>, <code>disabled</code> 요소의 속성과 동일합니다.
 			</p>
 		</article>
