--- a/assets/01-html/09-forms/06-optgroup_element.html
+++ b/assets/01-html/09-forms/06-optgroup_element.html
@@ -20,7 +20,7 @@
 		<!-- disabled -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[disabled] <span class="t_blue">&lt;optgroup disabled&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				disabled 속성이 명시된 옵션 그룹은 사용할 수 없으며, 사용자가 클릭할 수도 없습니다.<br>
 				따라서 이 속성을 사용하면 특정 조건이 충족될 때까지 사용자가 해당 옵션 그룹에 속한 옵션들을 클릭할 수 없도록 설정하고,
 				특정 조건이 충족되면 자바스크립트 등으로 disabled 속성값을 삭제하여 사용자가 해당 옵션들을 다시 사용할 수 있도록 조절할 수 있습니다.<br>
@@ -45,9 +45,9 @@
 		</article>
 
 		<!-- label -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[label] <span class="t_blue">&lt;optgroup label="텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;optgroup&gt;</code> 요소의 label 속성은 해당 옵션 그룹의 레이블(label)을 명시합니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.6.optgroup_element_label.html">
