--- a/assets/01-html/09-forms/09-textarea_element.html
+++ b/assets/01-html/09-forms/09-textarea_element.html
@@ -31,7 +31,7 @@
 		<!-- cols -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[cols] <span class="t_blue">&lt;textarea cols="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				텍스트 입력 영역 중 보이는 영역의 너비(width)를 명시합니다(기본값은 20).<br>
 				텍스트 입력 영역의 크기는 CSS의 height 속성과 width 속성을 사용해도 설정할 수 있습니다.
 			</p>
@@ -43,9 +43,9 @@
 		</article>
 
 		<!-- rows -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[rows] <span class="t_blue">&lt;textarea rows="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				텍스트 입력 영역 중 보이는 영역의 라인수를 명시합니다(기본값은 2).<br>
 				텍스트 입력 영역의 크기는 CSS의 height 속성과 width 속성을 사용해도 설정할 수 있습니다.
 			</p>
@@ -57,9 +57,9 @@
 		</article>
 
 		<!-- name -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;textarea name="텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;textarea&gt;</code> 요소의 이름을 명시합니다.<br>
 				name 속성은 폼(form)이 제출된 후 서버에서 폼 데이터(form data)를 참조하기 위해 사용되거나, 자바스크립트에서 요소를 참조하기 위해 사용됩니다.
 			</p>
@@ -71,9 +71,9 @@
 		</article>
 
 		<!-- disabled -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[disabled] <span class="t_blue">&lt;textarea disabled&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 <code>&lt;textarea&gt;</code> 요소가 비활성화됨을 명시합니다.<br>
 				disabled 속성이 명시된 텍스트 입력 영역은 사용할 수 없으며, 사용자가 클릭할 수도 없습니다.<br>
 				또한, 폼 데이터가 제출될 때도 disabled 속성이 명시된 텍스트 입력 영역의 데이터는 제출되지 않습니다.
@@ -94,9 +94,9 @@
 		</article>
 
 		<!-- readonly -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[readonly] <span class="t_blue">&lt;textarea readonly&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;textarea&gt;</code> 요소의 텍스트 입력 영역이 읽기 전용임을 명시합니다.<br>
 				읽기 전용으로 설정된 텍스트 입력 영역은 사용자가 수정할 수는 없지만, 해당 내용을 하이라이트하거나 복사할 수는 있습니다.<br>
 				따라서 이 속성을 사용하면 특정 조건이 충족될 때까지 사용자가 텍스트 입력 영역을 클릭할 수 없도록 설정하고,
@@ -113,9 +113,9 @@
 		</article>
 
 		<!-- placeholder -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[placeholder] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea placeholder="텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				placeholder 속성은 입력 필드에 사용자가 적절한 값을 입력할 수 있도록 도와주는 짧은 도움말을 명시합니다.<br>
 				이러한 도움말은 사용자가 입력할 수 있는 값에 대한 견본 값이나 입력 형식에 대한 간단한 설명 등이 사용되며,
 				사용자가 입력하기 전까지 입력 필드에 표시되다가 사용자가 입력을 시작하면 사라집니다.
@@ -138,9 +138,9 @@
 		</article>
 
 		<!-- autofocus -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[autofocus] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea autofocus&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				페이지가 로드될 때 자동으로 포커스가 <code>&lt;textarea&gt;</code> 요소로 이동됨을 명시합니다.
 			</p>
 			<p class="mt_s">
@@ -169,9 +169,9 @@
 		</article>
 
 		<!-- dirname -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[dirname] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea name="이름" dirname="이름.dir"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				dirname 속성은 폼 데이터(form data)가 서버로 제출될 때 서버로 보낼 텍스트 입력 영역의 텍스트 방향성(text directionality)을
 				저장할 이름을 명시합니다.<br>
 				dirname 속성값은 언제나 <code>&lt;textarea&gt;</code> 요소의 name 속성값 뒤에 &quot;.dir&quot;를 추가한 값이 됩니다.
@@ -194,9 +194,9 @@
 		</article>
 
 		<!-- form -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea form="form id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 <code>&lt;textarea&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;form&gt;</code> 요소의 id 값이어야만 합니다.
 			</p>
@@ -218,9 +218,9 @@
 		</article>
 
 		<!-- maxlength -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[maxlength] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea maxlength="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;textarea&gt;</code> 요소에서 허용되는 최대 문자수를 명시합니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.9.textarea_element_maxlength.html">
@@ -241,9 +241,9 @@
 		</article>
 
 		<!-- required -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[required] <span class="t_blue">&lt;textarea required&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>required</code> 속성은 폼 데이터(form data)가 서버로 제출되기 전 텍스트 입력 영역이 반드시 채워져 있어야 함을 명시합니다.
 			</p>
 			<p class="mt_s">
@@ -258,9 +258,9 @@
 		</article>
 
 		<!-- wrap -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[wrap] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea wrap="soft | hard"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				폼 데이터(form data)가 서버로 제출될 때 입력된 텍스트의 줄바꿈(wrap) 방식을 명시합니다.
 			</p>
 			<div class="ol_lst indent mt_s">
