--- a/assets/01-html/09-forms/10-output_element.html
+++ b/assets/01-html/09-forms/10-output_element.html
@@ -32,31 +32,32 @@
 		<!-- name -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;output name="이름"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				name 속성은 <code>&lt;output&gt;</code> 요소의 이름을 명시합니다.<br>
 				name 속성은 폼(form)이 제출된 후 서버에서 폼 데이터(form data)를 참조하기 위해 사용되거나 자바스크립트에서 요소를 참조하기 위해 사용됩니다.
 			</p>
 		</article>
 
 		<!-- for -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[for] <span class="t_blue">&lt;output for="요소 id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				for 속성은 계산 결과와 계산에 사용되는 요소 사이의 관계를 명시합니다.
 			</p>
 		</article>
 
 		<!-- form -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[form] <span class="t_blue">&lt;output form="form id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;output&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 반드시 같은 문서 내에 존재하는 <code>&lt;form&gt;</code> 요소의 id 속성값이어야 합니다.
 			</p>
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.10.output_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.10.output_element.html">
+		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
