--- a/assets/01-html/09-forms/11-progress_element.html
+++ b/assets/01-html/09-forms/11-progress_element.html
@@ -24,7 +24,7 @@
 		<!-- max -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[max] <span class="t_blue">&lt;progress max="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;progress&gt;</code> 요소의 max 속성은 작업이 모두 완료되기까지 필요한 총 작업량을 명시합니다.<br>
 				작업이 모두 완료되기까지 필요한 총 작업량을 부동 소수점 수(floating point number)로 명시합니다.<br>
 				기본값은 '1.0'입니다.
@@ -32,15 +32,16 @@
 		</article>
 
 		<!-- value -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;progress value="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;progress&gt;</code> 요소의 현재까지 완료된 작업량을 부동 소수점 수(floating point number)로 명시합니다.
 			</p>
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.11.progress_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/09-forms/9.11.progress_element.html">
+		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
