--- a/assets/01-html/10-structure/02-html5_document.html
+++ b/assets/01-html/10-structure/02-html5_document.html
@@ -51,7 +51,7 @@
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">HTML5에서 제목 지정하는 법</h2>
 
-		<p class="mt_s">
+		<p class="mt_ms">
 			비록 명시적 HTML 섹션 요소가 문서의 전체 구조를 정해주기는 하지만, 그 아웃라인을 좀 더 명확하게 표현하려면 제목의 사용도 중요합니다.<br>
 			기본 규칙은 단순합니다.<br>
 			처음 쓰인 HTML 제목 요소(<code>&lt;h1&gt;</code>, <code>&lt;h2&gt;</code>, <code>&lt;h3&gt;</code>, <code>&lt;h4&gt;</code>, <code>&lt;h5&gt;</code>, <code>&lt;h6&gt;</code> 중 하나)가 해당 섹션의 제목으로 정해집니다.
@@ -89,7 +89,7 @@
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">은연중 자동으로 정의되는 섹션</h2>
 
-		<p class="mt_s">
+		<p class="mt_ms">
 			HTML5에서 소개된 명시적 섹션 요소들만이 문서의 아웃라인을 정의하는 데 절대적으로 필요한 요소는 아니므로,
 			기존 웹에서 지배적으로 사용되는 HTML4와의 호환성을 지키려는 노력의 일환으로, 이들 없이도 섹션을 정의하는 또 하나의 방법이 있습니다.<br>
 			이를 은연중 자동으로 정의되는 섹션이라 하겠습니다.
@@ -186,7 +186,7 @@
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">섹션 구분의 근원점</h2>
 
-		<p class="mt_s">
+		<p class="mt_ms">
 			섹션 구분의 근원점은 HTML 요소 중 자기만의 아웃라인을 가질 수는 있지만,
 			그 안의 섹션이나 제목이 자기 위에 있는 요소의 아웃라인에는 어떠한 영향도 끼치지 않는 것들을 가리킵니다.<br>
 			논리적으로 따지면 당연히 문서의 섹션을 구분하는데 그 근본이 되는 <code>&lt;body&gt;</code>가 여기에 포함되고,
@@ -219,7 +219,7 @@
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">문서의 아웃라인 밖에 존재하는 섹션</h2>
 
-		<p class="mt_s">
+		<p class="mt_ms">
 			HTML5에선 웹 문서의 주요 아웃라인에 속하지 않는 섹션을 정의할 수 있도록 하는 새로운 네 가지의 요소들을 소개하고 있습니다.
 		</p>
 		<div class="ol_lst indent mt_s">
@@ -250,7 +250,7 @@
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">섹션을 구분짓는 요소의 주소와 발행 시간</h2>
 
-		<p class="mt_s">
+		<p class="mt_ms">
 			문서를 작성하다 보면 종종 저자의 이름이나 주소와 같은 연락 정보를 공개하고 싶을 때가 있습니다.<br>
 			HTML4에선 이런 목적으로 <code>&lt;address&gt;</code> 요소가 쓰였는데, HTML5에선 여기에 더 보완된 내용이 추가되었습니다.<br>
 			가끔 문서에는 여러 명의 저자가 작성한 여러 개의 섹션이 포함되어 있을 수도 있습니다.
