--- a/assets/01-html/10-structure/03-frameset_document.html
+++ b/assets/01-html/10-structure/03-frameset_document.html
@@ -31,15 +31,15 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[cols 속성] - <span class="t_blue">픽셀, %, *</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				프레임셋의 열(column)의 개수와 각각의 크기를 명시합니다.<br>
 				HTML5에서는 더 이상 지원하지 않습니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[rows 속성] - <span class="t_blue">픽셀, %, *</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				프레임셋의 행(row)의 개수와 각각의 크기를 명시합니다.<br>
 				HTML5에서는 더 이상 지원하지 않습니다.
 			</p>
