--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -31,8 +31,8 @@
 	</section>
 
 	<section class="txt_ex mt_xxl">
-		<h2>1.3.1 전역 속성(Global Attributes)</h2>
-		<p class="indent mt_s">
+		<h2>1.3.1. 전역 속성(Global Attributes)</h2>
+		<p class="indent mt_ms">
 			모든 HTML 요소에서 공통적으로 사용 가능한 속성.<br>
 			[attribute]에는 전역속성(global attributes), 이벤트속성(event attributes), 요소별 사용되는 속성으로 구분됩니다.<br>
 			아래 열거된 내용 외에 더 많은 속성이 있습니다.<br>
@@ -61,9 +61,9 @@
 		</article>
 		<!-- class -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[id] <span class="t_blue">&lt;element id=&quot;name&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				문서에서 고유한 식별자(Identifier, ID)를 정의합니다.<br>
 				한 페이지 내에서 유일한 name을 가지고 있어야 하며, 같은 name을 중복으로 사용할 수 없습니다.<br>
 				CSS 혹은 JavaScript의 요소 선택기(CSS 선택자나 getElementById(), Document.querySelector() 같은)를 통해서 요소를 선택하거나 접근합니다.
@@ -81,9 +81,9 @@
 		</article>
 		<!-- id -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[style] <span class="t_blue">&lt;element style=&quot;value&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				요소에 적용할 CSS를 선언합니다.<br>
 				인라인 스타일 방식이며, CSS 우선 순위에서는 1순위에 해당합니다.
 			</p>
@@ -100,9 +100,9 @@
 		</article>
 		<!-- style -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[title] <span class="t_blue">&lt;element title=&quot;text&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				요소의 정보(설명)을 지정합니다.<br>
 				target="_blank" 속성이 있을 경우 title 속성에 "새 창" 또는 적합한 설명(예를 들어 '어디어디 사이트 새 창 열림' 등)을 기입해야 합니다.
 			</p>
@@ -119,9 +119,9 @@
 		</article>
 		<!-- title -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[lang] <span class="t_blue">&lt;element lang=&quot;요소의 언어(ISO 639-1)를 지정&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				요소의 언어(ISO 639-1)를 지정합니다.
 			</p>
 			<aside class="browser_support mt_ms" data-tit="lang">
@@ -137,9 +137,9 @@
 		</article>
 		<!-- lang -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[data-*] <i class="fab fa-html5"></i> <span class="t_blue">&lt;element data-global=&quot;text&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				(data-custom-data-attributes)속성은 사용자 정의 데이터 속성을 지정합니다<br>
 				현재 많이 사용하는 방법이며 활용성 면에서도 우수합니다.<br>
 				HTML에 JavaScript에서 이용할 수 있는 데이터(정보)를 저장하는 용도로 사용합니다.
@@ -170,9 +170,9 @@
 		</article>
 		<!-- data-* -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[draggable] <i class="fab fa-html5"></i> <span class="t_blue">&lt;element draggable=&quot;true | false&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				요소가 <span class="reference"><a href="https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API" target="_blank">Drag and Drop API</a></span>를 사용 가능한지 여부를 지정합니다.
 			</p>
 			<div class="ol_lst">
@@ -203,9 +203,9 @@
 		</article>
 		<!-- draggable -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[hidden] <span class="t_blue">&lt;element hidden&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				기본적으로 hidden 속성은 'boolean attribute(불리언 속성)'입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 'false'값을 가지게 되며, 명시하면 자동으로 'true'값을 가지게 됩니다.<br>
 				해당요소를 숨깁니다(CSS 기본값 : display:none;).
@@ -233,9 +233,9 @@
 		</article>
 		<!-- hidden -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[tabindex] <span class="t_blue">&lt;element tabindex=&quot;숫자&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				Tab키를 이용해 요소를 순차적으로 포커스 탐색할 순서를 지정합니다.<br>
 				필요한 경우에만 사용하고 습관적으로 사용해서는 안 됩니다.<br>
 				대화형 콘텐츠(Interactive Content)는 기본적으로 코드 순서대로 탭 순서가 지정됩니다.<br>
@@ -266,9 +266,9 @@
 		</article>
 		<!-- tabindex -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[contenteditable] <i class="fab fa-html5"></i> <span class="t_blue">&lt;element contenteditable=&quot;true&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				사용자가 요소를 편집할 수 있는지 여부를 나타내는 열거형 속성입니다.<br>
 				이 경우 브라우저는 위젯을 수정하여 편집을 허용합니다.<br>
 				속성값은 다음 값 중 하나이어야 합니다.
@@ -305,9 +305,9 @@
 		</article>
 		<!-- contenteditable -->
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[dir] <span class="t_blue">&lt;element dir=&quot;ltr | rtl | auto&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				열거형 속성으로 요소의 텍스트에 대한 방향성을 나타내며, 이 속성은 다음과 같은 값을 가질 수 있습니다.<br>
 				dir 속성은 (base, br, frame, frameset, hr, iframe, param, script)태그에서는 유효하지 않습니다.
 			</p>
