--- a/assets/01-html/05-textLevel/01-a_element.html
+++ b/assets/01-html/05-textLevel/01-a_element.html
@@ -50,15 +50,15 @@
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[href] <span class="t_blue">&lt;a href=&quot;URL 주소&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;a&gt;</code> 요소의 href(Hyper text REFerence) 속성은 링크된 페이지의 URL을 명시합니다. URL은 HTTP 기반 문서 외에서도 쓰입니다. URL은 브라우저가 지원하는 어떠한 프로토콜에도 사용할 수도 있습니다. 예로, 사용자 환경에서는 file, ftp, 그리고 mailto 링크가 많이 사용됩니다.
 			</p>
 		</article>
 		<!-- href -->
 
-		<article class="txt_ex indent_max mt_l">
+		<article class="txt_ex indent_max mt_xl">
 			<h3 class="ml_mn">[rel] <span class="t_blue">&lt;a href=&quot;URL 주소&quot; rel=&quot;속성값&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;a&gt;</code> 요소의 rel(relationship) 속성은 현재 문서와 링크된 문서 사이의 연관 관계(relationship)를 명시합니다.<br>
 				여러 검색 엔진들은 링크에 대한 더 많은 정보를 수집하기 위해 이 속성을 사용할 수 있습니다.<br>
 				이 속성은 반드시 href 속성이 설정되어 있어야만 사용할 수 있습니다.
@@ -122,9 +122,9 @@
 		</article>
 		<!-- rel -->
 
-		<article class="txt_ex indent_max mt_l">
+		<article class="txt_ex indent_max mt_xl">
 			<h3 class="ml_mn">[hreflang] <span class="t_blue">&lt;a href=&quot;URL 주소&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [hreflang] attribute">
+			<div class="uk_gist_code_box mt_m" data-tit="a element [hreflang] attribute">
 				<textarea readonly="readonly">
 					<a href="URL 주소" hreflang="언어 코드[ko(한국어), en(영어), zh(중국어), ja(일본어), fr(프랑스어) 등]"></a>
 				</textarea>
@@ -136,9 +136,9 @@
 		</article>
 		<!-- hreflang -->
 
-		<article class="txt_ex indent_max mt_l">
+		<article class="txt_ex indent_max mt_xl">
 			<h3 class="ml_mn">[target] <span class="t_blue">&lt;a target=&quot;속성값&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [target] attribute">
+			<div class="uk_gist_code_box mt_m" data-tit="a element [target] attribute">
 				<textarea readonly="readonly">
 					<a href="URL 주소" target="_blank|_self|_parent|_top"></a>
 				</textarea>
@@ -157,9 +157,9 @@
 		</article>
 		<!-- target -->
 
-		<article class="txt_ex indent_max mt_l">
+		<article class="txt_ex indent_max mt_xl">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;a type=&quot;속성값&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [type] attribute">
+			<div class="uk_gist_code_box mt_m" data-tit="a element [type] attribute">
 				<textarea readonly="readonly">
 					<a href="https://uxkm.github.io" type="text/html">UXKM 사이트로 이동!</a>
 				</textarea>
@@ -175,9 +175,9 @@
 		</article>
 		<!-- type -->
 
-		<article class="txt_ex indent_max mt_l">
+		<article class="txt_ex indent_max mt_xl">
 			<h3 class="ml_mn">[rev] <span class="t_blue">&lt;a rev=&quot;속성값&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [rev] attribute">
+			<div class="uk_gist_code_box mt_m" data-tit="a element [rev] attribute">
 				<textarea readonly="readonly">
 					<a href="chapter1.html" rev="toc" rel="next">chapter 1</a>
 				</textarea>
@@ -188,9 +188,9 @@
 		</article>
 		<!-- rev -->
 
-		<article class="txt_ex indent_max mt_l">
+		<article class="txt_ex indent_max mt_xl">
 			<h3 class="ml_mn">[download] <span class="t_blue">&lt;a download=&quot;속성값&quot;&gt;</span></h3>
-			<div class="uk_gist_code_box mt_ms" data-tit="a element [download] attribute">
+			<div class="uk_gist_code_box mt_m" data-tit="a element [download] attribute">
 				<textarea readonly="readonly">
 					<a download="다운로드되는 파일의 새로운 이름을 명시하며, 생략할 수 있음">다운로드</a>
 				</textarea>
