--- a/assets/01-html/05-textLevel/16-abbr_element.html
+++ b/assets/01-html/05-textLevel/16-abbr_element.html
@@ -14,7 +14,7 @@
 			이러한 <code>&lt;abbr&gt;</code> 요소는 브라우저나 번역 시스템, 검색 엔진에게 유용한 정보를 줄 수 있습니다.<br>
 			<code>&lt;abbr&gt;</code> 요소 위에 마우스를 올려놓으면 title 속성으로 명시한 단어의 원형이 나타납니다.<br>
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="abbr element CSS default">
 				<textarea readonly="readonly">
