--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -29,7 +29,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[shape] <span class="t_blue">&lt;area shape=&quot;rect | circle | poly&quot;&gt;</span></h3>
-			<p class="mt_sm">
+			<p class="mt_ms">
 				영역의 모양을 명시합니다.
 			</p>
 			<ol class="ol_lst indent mt_sm">
@@ -39,9 +39,9 @@
 			</ol>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[coords] <span class="t_blue">&lt;area coords=&quot;좌표&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				좌표값을 지정합니다. 이미지의 왼쪽 모서리를 기준으로 하이퍼링크 영역의 시작과 끝 부분을 지정합니다.<br>
 				이 coords속성값을 지정하기가 까다롭습니다. 그래서 이 부분은 텍스트 에디터에서 직접 코딩하지 않고 이미지맵을 생성하는 유틸리티를 사용하는 것이 좋습니다.<br>
 				이미지 맵은 링크에만 국한되지 않습니다. 이미지 맵 버튼을 클릭하면 프로그램이나 스크립트가 실행될 수도 있습니다.<br>
@@ -94,24 +94,24 @@
 			</ol>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[href] <span class="t_blue">&lt;area href=&quot;URL&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				해당 영역(area)에 연결된 하이퍼링크의 대상 URL(target URL)을 명시합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[alt] <span class="t_blue">&lt;area alt=&quot;대체 텍스트&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				영역(area)에 대한 대체 텍스트(alternate text)를 명시합니다.<br>
 				반드시 필수로 들어가야 하며, href 속성이 설정되어 있어야만 사용할 수 있습니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[target] <span class="t_blue">&lt;area target=&quot;_blank | _parent | _self | _top | 프레임 이름&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				영역을 클릭했을 때 대상 URL의 문서가 열릴 위치를 명시합니다.
 			</p>
 			<ol class="ol_lst mt_sm indent">
@@ -122,23 +122,23 @@
 			</ol>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[download] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area download=&quot;파일이름&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				사용자가 하이퍼링크를 클릭할 때 해당 대상(target)으로 연결되지 않고 대신 해당 콘텐츠의 다운로드를 명시합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[media] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area media=&quot;미디어 쿼리&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				대상 URL이 최적화되는 미디어나 매체를 명시합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[rel] <i class="fab fa-html5"></i> <span class="t_blue">&lt;area rel=&quot;alternate | author | bookmark | help | license | next | nofollow | noreferrer | prefetch | prev | search | tag&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				현재 문서와 대상 URL 사이의 연관 관계를 명시합니다.<br>
 				href 속성을 포함하는 앵커의 경우이 속성은 대상 객체와 링크 객체의 관계를 지정합니다.
 				<span class="reference mt_l"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Link_types" target="_blank" title="새창열림">링크 유형 값(참조)</a></span><br>
