--- a/assets/01-html/06-embedded/05-video_element.html
+++ b/assets/01-html/06-embedded/05-video_element.html
@@ -39,7 +39,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;video src=&quot;URL&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				삽입(embed)할 동영상의 주소(url)입니다.<br>
 				이 속성은 선택 사항으로, 비디오 블록 내의 <code>&lt;source&gt;</code> 요소를 사용하여 삽입할 동영상을 명시할 수도 있습니다.
 			</p>
@@ -55,9 +55,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[width], [height] <span class="t_blue">&lt;video width=&quot;Number&quot; height=&quot;Number&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				비디오의 출력 영역 너비와 높이이며, CSS 픽셀 단위입니다.
 			</p>
 			<aside class="browser_support mt_ms" data-tit="width, height">
@@ -72,9 +72,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[autoplay](Boolean) <span class="t_blue">&lt;video autoplay&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 값이 설정되면, 데이터 로딩이 완료되지 않더라도 재생 가능한 시점에 자동으로 재생이 시작됩니다.<br>
 				iPhone 또는 Android에서는 지원되지 않으며, 모든 데스크톱 브라우저, iPad, Firefox와 Android용 Opera에서는 지원됩니다.
 			</p>
@@ -90,9 +90,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[controls](Boolean) <span class="t_blue">&lt;video controls&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				기본 동영상 컨트롤을 표시합니다(재생, 일시 중지 등).
 			</p>
 			<aside class="browser_support mt_ms" data-tit="controls">
@@ -107,9 +107,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[loop](Boolean) <span class="t_blue">&lt;video loop&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 값이 설정되면, 동영상 재생이 마친 후(동영상의 마지막에 도달하면) 자동으로 처음으로 돌아가서 다시 재생됩니다.
 			</p>
 			<aside class="browser_support mt_ms" data-tit="loop">
@@ -124,9 +124,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[muted](Boolean) <span class="t_blue">&lt;video muted&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				비디오에 포함되어 있는 오디오의 기본 설정을 나타내는 부울 속성입니다.<br>
 				설정하면 오디오가 나오지 않습니다.<br>
 				기본 값은 <mark>false</mark>이며 이는 비디오가 재생되면 오디오도 같이 재생됨을 의미합니다.
@@ -143,9 +143,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[poster] <span class="t_blue">&lt;video poster=&quot;URL&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				동영상 콘텐츠를 다운로드할 필요가 없이 동영상 요소가 표시되자마자 브라우저에 나타낼 수 있는 이미지 파일의 주소(URL)입니다.<br>
 				이 속성이 명시되지 않으면, 첫 번째 프레임이 사용 가능하게 될 때까지 아무것도 출력되지 않다가, 가능하게 되면 첫 번째 프레임을 포스터 프레임으로 출력합니다.
 			</p>
@@ -161,9 +161,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[preload] <span class="t_blue">&lt;video preload=&quot;none | metadata | auto&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				사전 로드할 정보나 콘텐츠의 크기를 브라우저에 알려줍니다.<br>
 				스펙에서는 기본값으로 metadata를 권장하지만 설정하지 않았다면 각 브라우저가 정한 기본값을 설정하게 됩니다.
 			</p>
