--- a/assets/01-html/06-embedded/07-track_element.html
+++ b/assets/01-html/06-embedded/07-track_element.html
@@ -18,20 +18,20 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[default] <span class="t_blue">&lt;track default&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 속성은 만일 사용자의 설정이 다른 자막이 더 적절하다고 가리키지 않을 경우 활성화될 자막을 가리킵니다.<br>
 				이 속성은 하나의 미디어 요소에서 하나의 track 요소에만 사용됩니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[kind] <span class="t_blue">&lt;track kind=&quot;subtitles | captions | descriptions | chapters | metadata&quot;&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이 속성은 만일 사용자의 설정이 다른 자막이 더 적절하다고 가리키지 않을 경우 활성화될 자막을 가리킵니다.<br>
 				이 속성은 하나의 미디어 요소에서 하나의 track 요소에만 사용됩니다.<br>
 				텍스트 자막의 어떻게 사용될 것인지를 의미합니다. 생략될경우 subtitles이 기본값입니다. 다음 키워드들이 값으로 사용될 수 있습니다.
 			</p>
-			<div class="ol_lst indent mt_s">
+			<div class="ol_lst indent mt_ms">
 				<ol>
 					<li class="line_code font14">
 						<strong>subtitles</strong>
@@ -61,23 +61,23 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[label] <span class="t_blue">&lt;track label="Key Stage 1"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				브라우저가 사용 가능한 자막 텍스트를 나열할 떄 사용되는 사용자가 읽을 수 있는 자막 텍스트의 제목들입니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;track src="자막의 주소(.vtt 파일)"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				자막의 주소(.vtt 파일). 이것은 유효한 URL이여야 합니다. 이 속성은 반드시 정의되어야 합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[srclang] <span class="t_blue">&lt;track srclang="ko"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				자막 텍스트 데이터의 언어. 만일 kind 속성이 subtitles로 설정되었을 경우, srclang 속성은 반드시 정의되어야 합니다.
 			</p>
 		</article>
