--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -29,7 +29,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[media] <span class="t_blue">&lt;source media="미디어 조건"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				사용자 에이전트가 각 <code>&lt;source&gt;</code> 요소에 대해 평가할 미디어 조건(미디어 쿼리와 유사)을 지정합니다.<br>
 				미디어 조건을 만족하지 못하면 해당 <code>&lt;source&gt;</code>요소를 무시합니다.
 			</p>
@@ -43,9 +43,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;source type="MIME 유형(image/webp)"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				요소 속성에서 리소스 URL에 대한 MIME 유형을 지정합니다.<br>
 				사용자 에이전트가 지정된 유형을 지원하지 않으면 srcset 요소를 무시합니다.
 			</p>
@@ -60,9 +60,9 @@
 			</div>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[srcset] <span class="t_blue">&lt;source srcset="URL"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				브라우저가 크기에 따라 사용할 수 있는 이미지를 나타냅니다.<br>
 				높은 DPI의 스크린의 고해상도 영상을 제공하기 위해 사용합니다.
 			</p>
