--- a/assets/01-html/06-embedded/09-source_element.html
+++ b/assets/01-html/06-embedded/09-source_element.html
@@ -23,15 +23,15 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;source src="URL"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;source&gt;</code> 요소가 <code>&lt;audio&gt;</code> 요소나 <code>&lt;video&gt;</code> 요소 내부에 사용될 때 필수 속성으로, 미디어 파일의 URL을 명시합니다.<br>
 				만약 <code>&lt;source&gt;</code> 요소가 <code>&lt;picture&gt;</code> 요소 내부에 있을 경우, 이 속성은 무시됩니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;source type="미디어 타입(MIME 타입)"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				미디어 리소스의 미디어 타입(MIME 타입)을 명시합니다(선택적으로 codecs 매개 변수도 함께).<br>
 				<span class="reference mt_l"><a href="http://tools.ietf.org/html/rfc4281" target="_blank" title="새창열림">RFC 4281</a></span>에
 				코덱을 어떻게 지정하는지에 대한 정보를 확인할 수 있습니다.
@@ -48,9 +48,9 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[srcset] <span class="t_blue">&lt;source srcset="URL"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;source&gt;</code> 요소가 <code>&lt;picture&gt;</code> 요소 내부에 사용될 때 필수 속성으로, 각각 다른 환경에서 사용될 이미지의 URL을 명시합니다.
 			</p>
 			<aside class="browser_support mt_ms" data-tit="srcset">
@@ -65,19 +65,19 @@
 			</aside>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[sizes] <span class="t_blue">&lt;source sizes="유효한 크기값"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				각각 다른 페이지 레이아웃에서 사용될 이미지의 크기를 명시합니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[media] <span class="t_blue">&lt;source media="속성값"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;picture&gt;</code> 요소에서 이미지 리소스의 용도에 맞는 매체의 미디어 쿼리를 명시합니다.
 			</p>
-			<div class="ol_lst indent mt_s">
+			<div class="ol_lst indent mt_ms">
 				<ol>
 					<li class="line_code font14">
 						<strong class="mb_sm">속성값에 사용할 수 있는 연산자는 다음과 같습니다.</strong>
@@ -101,7 +101,7 @@
 			</div>
 			<div class="ol_lst indent mt_m">
 				<h4 class="mt_ml">속성값에 사용할 수 있는 값은 다음과 같습니다.</h4>
-				<ol>
+				<ol class="indent">
 					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">width</strong>
 						<p>대상 디스플레이 영역의 너비를 명시합니다.</p>
