--- a/assets/01-html/07-edits/02-ins_element.html
+++ b/assets/01-html/07-edits/02-ins_element.html
@@ -30,15 +30,15 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[cite] <span class="t_blue">&lt;ins cite="URL"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				텍스트가 추가되거나 변경된 이유에 대해서 알 수 있는 문서의 URL을 명시합니다.<br>
 				예를 들면, 회의록이나 문제 해결 시스템의 링크 같은 것들이 있습니다.
 			</p>
 		</article>
 
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[datetime] <span class="t_blue">&lt;ins datetime="YYYY-MM-DDThh:mm:ssTZD"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				텍스트가 추가되거나 변경된 날짜와 시간을 명시합니다.<br>
 				이 속성은 요소의 시간과 날짜를 나타내며 선택적으로 시간 정보를 갖는 유효한 날짜 문자열이어야 합니다.<br>
 				만일 값이 선택적으로 시간 정보를 갖는 날짜 문자열로 파싱될 수 없다면, 요소는 관련된 타임스탬프를 소유하지 않게 됩니다.
