--- a/assets/01-html/09-forms/03-input_element_part2.html
+++ b/assets/01-html/09-forms/03-input_element_part2.html
@@ -67,7 +67,7 @@
 		</article>
 
 		<!-- value -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;input value="텍스트"&gt;</span></h3>
 			<p class="mt_ms">
 				입력 필드의 초기값 또는 기본 선택을 명시합니다.<br>
@@ -93,9 +93,9 @@
 		</article>
 
 		<!-- checked -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[checked] <span class="t_blue">&lt;input type="checkbox|radio" checked&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				기본적으로 checked 속성은 boolean attribute(불리언 속성) 입니다.<br>
 				<code>&lt;input&gt;</code> 요소의 checked 속성은 페이지가 로드될 때 미리 선택될 <code>&lt;input&gt;</code> 요소를 명시합니다.<br>
 				checked 속성은 페이지가 로드된 후에도 자바스크립트를 사용하여 설정할 수 있습니다.<br>
@@ -120,9 +120,9 @@
 		</article>
 
 		<!-- disabled -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[disabled] <span class="t_blue">&lt;input disabled&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 disabled 속성은 해당 <code>&lt;input&gt;</code> 요소가 비활성화됨을 명시합니다.<br>
 				disabled 속성이 명시된 <code>&lt;input&gt;</code> 요소는 사용할 수 없으며, 사용자가 클릭할 수도 없습니다.<br>
 				또한, 폼 데이터가 제출될 때도 disabled 속성이 명시된 <code>&lt;input&gt;</code> 요소의 데이터는 제출되지 않습니다.<br>
@@ -148,9 +148,9 @@
 		</article>
 
 		<!-- readonly -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[readonly] <span class="t_blue">&lt;input readonly&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 readonly 속성은 <code>&lt;input&gt;</code> 요소의 입력 필드가 읽기 전용임을 명시합니다.<br>
 				읽기 전용으로 설정된 입력 필드는 사용자가 수정할 수는 없지만, 해당 내용을 하이라이트하거나 복사할 수는 있습니다.<br>
 				따라서 이 속성을 사용하면 특정 조건이 충족될 때까지 사용자가 입력 필드의 내용을 수정할 수 없도록 설정하고, 특정 조건이 충족되면 자바스크립트 등으로 readonly 속성값을 삭제하여 사용자가 입력 필드를 수정할 수 있도록 조절할 수 있습니다.<br>
@@ -176,9 +176,9 @@
 		</article>
 
 		<!-- size -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[size] <span class="t_blue">&lt;input type="email | password | search|tel | text|url" size="숫자"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 size 속성은 <code>&lt;input&gt;</code> 요소의 너비를 문자수(in characters) 단위로 명시합니다.<br>
 				maxlength 속성을 사용하면, <code>&lt;input&gt;</code> 요소에서 입력이 허용되는 최대 문자수를 명시할 수도 있습니다.<br>
 				size 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
@@ -200,9 +200,9 @@
 		</article>
 
 		<!-- src -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[src] <span class="t_blue">&lt;input type="image" src="이미지 URL" alt="대체 텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				제출 버튼(submit button)으로 사용될 이미지의 URL을 명시합니다.<br>
 				(단, <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;image&quot;인 경우에만 사용할 수 있음)
 			</p>
@@ -225,9 +225,9 @@
 		</article>
 
 		<!-- alt -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[alt] <span class="t_blue">&lt;input type="image" src="이미지 URL" alt="대체 텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				alt 속성은 이미지를 위한 대체 텍스트를 명시합니다.<br>
 				이러한 alt 속성은 사용자가 느린 네트워크 환경이나 src 속성값의 오류, 시각 장애인용 스크린 리더의 사용 등 어떤 이유로든 사용자가 이미지를 직접 확인이 불가능한 경우 이미지 대신 제공할 대체 정보를 제공합니다.
 			</p>
@@ -250,13 +250,13 @@
 		</article>
 
 		<!-- placeholder -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[placeholder] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="email | password | search|tel | text | url" placeholder="텍스트"&gt;</span></h3>
-			<p class="mt_s">
-				<code>&lt;input&gt;</code> 요소의 placeholder 속성은 입력 필드에 사용자가 적절한 값을 입력할 수 있도록 도와주는 짧은 도움말을 명시합니다.<br>
+			<p class="mt_ms">
+				<code>&lt;input&gt;</code> 요소의 <code>placeholder</code> 속성은 입력 필드에 사용자가 적절한 값을 입력할 수 있도록 도와주는 짧은 도움말을 명시합니다.<br>
 				이러한 도움말은 사용자가 입력할 수 있는 값에 대한 견본값이나 입력 형식에 대한 간단한 설명 등이 사용되며, 사용자가 입력하기 전까지 입력 필드에 표시되다가 사용자가 입력을 시작하면 사라집니다.<br>
-				placeholder 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
-				email, password, search, tel, text, url
+				<code>placeholder</code> 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
+				<code>email</code>, <code>password</code>, <code>search</code>, <code>tel</code>, <code>text</code>, <code>url</code>
 			</p>
 			<div class="view_editor edit_code mt_ms" data-target="html/09-forms/9.3.input_element_placeholder.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -274,9 +274,9 @@
 		</article>
 
 		<!-- required -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[required] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="checkbox | date | email | file | number | password | pickers | radio | search | tel | text | url" required&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 태그의 required 속성은 폼 데이터(form data)가 서버로 제출되기 전 반드시 채워져 있어야 하는 입력 필드를 명시합니다.<br>
 				required 속성이 제대로 동작하는 <code>&lt;input&gt;</code> 요소의 type 속성값은 다음과 같습니다.<br>
 				checkbox, date, email, file, number, password, pickers, radio, search, tel, text, url
@@ -301,9 +301,9 @@
 		</article>
 
 		<!-- width, height -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[width], [height] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="image" src="이미지 URL" width="픽셀" height="픽셀" alt="대체 텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				요소의 너비를 픽셀 단위(in pixels)로 명시합니다.<br>
 				이 속성은 <code>&lt;input&gt;</code> 요소의 type 속성값이 &quot;image&quot;인 경우에만 사용할 수 있습니다.<br>
 				이미지의 height 속성과 width 속성은 언제나 명시하는 것이 좋습니다.<br>
@@ -327,9 +327,9 @@
 		</article>
 
 		<!-- accept -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[accept] <span class="t_blue">&lt;input type="file" accept="파일 확장자 | audio/* | video/* | image/* | 미디어 타입"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 accept 속성은 서버로 업로드할 수 있는 파일의 타입을 명시합니다.<br>
 				accept 속성에 하나 이상의 속성값을 명시할 경우에는 콤마(,)를 사용하여 구분합니다.<br>
 				이러한 accept 속성을 유효성 검사를 도구로 사용해서는 안 되며, 업로드된 파일은 서버에서 검증되어야 합니다.<br>
@@ -376,9 +376,9 @@
 		</article>
 
 		<!-- accesskey -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[accesskey] <span class="t_blue">&lt;element accesskey="character(항목을 활성화/포커스 하기위한 키보드 숏컷키)"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				요소를 활성화 / 포커스 하기 위한 단축키를 지정합니다.<br>
 				HTML5에서는 accesskey 속성을 모든 HTML 요소에서 사용할 수 있습니다(HTML 요소에서 유효성을 검사하지만 반드시 유용한 것은 아닙니다).<br>
 				HTML 4.01에서 accesskey 속성은 <code>&lt;a&gt;</code>, <code>&lt;area&gt;</code>,
@@ -434,9 +434,9 @@
 		</article>
 
 		<!-- autocomplete -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[autocomplete] <i class="fab fa-html5"></i> <span class="t_blue">&lt;input type="color | datepickers | email | password | range | search | tel | text" autocomplete="on | off"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;input&gt;</code> 요소의 autocomplete 속성은 <code>&lt;input&gt;</code> 요소에서 자동 완성 기능을 사용할 지 여부를 명시합니다.<br>
 				autocomplete 속성값을 on으로 명시하면,
 				브라우저는 사용자가 이전에 입력했던 값들을 기반으로 사용자가 입력한 값과 비슷한 값들을 드롭다운 옵션으로 보여줍니다.<br>
