--- a/assets/01-html/09-forms/07-option_element.html
+++ b/assets/01-html/09-forms/07-option_element.html
@@ -21,7 +21,7 @@
 		<!-- disabled -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[disabled] <span class="t_blue">&lt;option disabled&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;option&gt;</code> 요소의 disabled 속성은 해당 옵션이 비활성화됨을 명시합니다.<br>
 				disabled 속성이 명시된 옵션은 사용할 수 없으며, 사용자가 클릭할 수도 없습니다.<br>
 				따라서 이 속성을 사용하면 특정 조건이 충족될 때까지 사용자가 해당 옵션을 클릭할 수 없도록 설정하고,
@@ -37,9 +37,9 @@
 		</article>
 
 		<!-- label -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[label] <span class="t_blue">&lt;option label="텍스트"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;option&gt;</code> 요소의 label 속성은 해당 옵션의 레이블(label)을 명시합니다.<br>
 				만약 label 속성이 명시되지 않는다면, 해당 값은 <code>&lt;option&gt;</code> 요소 내의 텍스트로 자동 설정됩니다.
 			</p>
@@ -56,9 +56,9 @@
 		</article>
 
 		<!-- selected -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[selected] <span class="t_blue">&lt;option selected&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				selected 속성은 페이지가 로드될 때 옵션 중에서 미리 선택되어지는 옵션을 명시합니다.<br>
 				selected 속성이 명시된 옵션은 드롭다운 리스트에 가장 먼저 표시되며, 페이지가 로드된 후에도 자바스크립트를 사용하여 selected 속성을 설정할 수 있습니다.<br>
 				disabled 속성은 불리언(boolean) 속성입니다.<br>
@@ -72,9 +72,9 @@
 		</article>
 
 		<!-- label -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;option value="값"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				value 속성은 해당 옵션이 선택될 때 서버로 제출되는 값을 명시합니다.<br>
 				<code>&lt;option&gt;</code> 태그와 <code>&lt;/option&gt;</code> 태그 사이의 텍스트는 단지 브라우저가 드롭다운 리스트에 표시할 내용이며,
 				value 속성값은 폼을 제출할 때 서버로 보내지는 값입니다.<br>
