--- a/assets/01-html/09-forms/12-meter_element.html
+++ b/assets/01-html/09-forms/12-meter_element.html
@@ -24,62 +24,62 @@
 		<!-- value -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;meter value="숫자"&gt;</span></h3>
-			<p class="mt_s">
-				value 속성은 게이지의 현재 또는 측정된 값을 명시합니다.<br>
-				value 속성은 <code>&lt;meta&gt;</code> 요소의 필수 속성으로, value 속성값은 반드시 min 속성값과 max 속성값 사이의 값이어야 합니다.
+			<p class="mt_ms">
+				<code>value</code> 속성은 게이지의 현재 또는 측정된 값을 명시합니다.<br>
+				<code>value</code> 속성은 <code>&lt;meta&gt;</code> 요소의 필수 속성으로, <code>value</code> 속성값은 반드시 <code>min</code> 속성값과 <code>max</code> 속성값 사이의 값이어야 합니다.
 			</p>
 		</article>
 
 		<!-- high -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[high] <span class="t_blue">&lt;meter high="숫자"&gt;</span></h3>
-			<p class="mt_s">
-				high 속성은 범위(gauge) 내에서 높은 값(high value)으로 간주될 구간을 명시합니다.<br>
-				high 속성값은 max 속성값보다 작거나 같아야 하며, low 속성값과 min 속성값보다는 크거나 같아야 합니다.
+			<p class="mt_ms">
+				<code>high</code> 속성은 범위(gauge) 내에서 높은 값(high value)으로 간주될 구간을 명시합니다.<br>
+				<code>high</code> 속성값은 <code>max</code> 속성값보다 작거나 같아야 하며, <code>low</code> 속성값과 <code>min</code> 속성값보다는 크거나 같아야 합니다.
 			</p>
 		</article>
 
 		<!-- low -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[low] <span class="t_blue">&lt;meter low="숫자"&gt;</span></h3>
-			<p class="mt_s">
-				low 속성은 범위(gauge) 내에서 낮은 값(low value)으로 간주될 구간을 명시합니다.<br>
-				low 속성값은 min 속성값보다 크거나 같아야 하며, high 속성값과 max 속성값보다는 작거나 같아야 합니다.
+			<p class="mt_ms">
+				<code>low</code> 속성은 범위(gauge) 내에서 낮은 값(low value)으로 간주될 구간을 명시합니다.<br>
+				<code>low</code> 속성값은 <code>min</code> 속성값보다 크거나 같아야 하며, <code>high</code> 속성값과 <code>max</code> 속성값보다는 작거나 같아야 합니다.
 			</p>
 		</article>
 
 		<!-- max -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[max] <span class="t_blue">&lt;meter max="숫자"&gt;</span></h3>
-			<p class="mt_s">
-				max 속성은 게이지(gauge)의 최댓값을 명시합니다.max 속성값은 min 속성값보다 크거나 같아야 하며, 만약 명시되지 않는다면 기본값인 1로 설정됩니다.<br>
-				이러한 max 속성은 min 속성과 함께 사용하여 전체 범위를 설정할 수 있습니다.<br>
-				max 속성값은 min 속성값보다 크거나 같아야 하며, 만약 명시되지 않는다면 기본값인 1로 설정됩니다.
+			<p class="mt_ms">
+				<code>max</code> 속성은 게이지(gauge)의 최댓값을 명시합니다. <code>max</code> 속성값은 <code>min</code> 속성값보다 크거나 같아야 하며, 만약 명시되지 않는다면 기본값인 1로 설정됩니다.<br>
+				이러한 max<code>high</code> 속성은 <code>min</code> 속성과 함께 사용하여 전체 범위를 설정할 수 있습니다.<br>
+				<code>max</code> 속성값은 <code>min</code> 속성값보다 크거나 같아야 하며, 만약 명시되지 않는다면 기본값인 1로 설정됩니다.
 			</p>
 		</article>
 
 		<!-- min -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[min] <span class="t_blue">&lt;meter min="숫자"&gt;</span></h3>
-			<p class="mt_s">
-				min 속성은 게이지(gauge)의 최소값을 명시합니다.min 속성값은 max 속성값보다 작거나 같아야 하며, 만약 명시되지 않는다면 기본값인 0으로 설정됩니다.<br>
-				이러한 min 속성은 max 속성과 함께 사용하여 전체 범위를 설정할 수 있습니다.<br>
-				min 속성값은 max 속성값보다 작거나 같아야 하며, 만약 명시되지 않는다면 기본값인 0으로 설정됩니다.
+			<p class="mt_ms">
+				<code>min</code> 속성은 게이지(gauge)의 최소값을 명시합니다. <code>min</code> 속성값은 <code>max</code> 속성값보다 작거나 같아야 하며, 만약 명시되지 않는다면 기본값인 0으로 설정됩니다.<br>
+				이러한 <code>min</code> 속성은 <code>max</code> 속성과 함께 사용하여 전체 범위를 설정할 수 있습니다.<br>
+				<code>min</code> 속성값은 <code>max</code> 속성값보다 작거나 같아야 하며, 만약 명시되지 않는다면 기본값인 0으로 설정됩니다.
 			</p>
 		</article>
 
 		<!-- optimum -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[optimum] <span class="t_blue">&lt;meter optimum="숫자"&gt;</span></h3>
-			<p class="mt_s">
-				optimum 속성은 범위(gauge) 내에서 최적값(optimal value)으로 간주될 값을 명시합니다.
+			<p class="mt_ms">
+				<code>optimum</code> 속성은 범위(gauge) 내에서 최적값(optimal value)으로 간주될 값을 명시합니다.
 			</p>
 		</article>
 
 		<!-- form -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[form] <span class="t_blue">&lt;meter form="form id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;meter&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;meter&gt;</code> 요소의 id 값이어야만 합니다.<br>
 				이 속성값은 현재 모든 브라우저에서 지원하지 않습니다.
