--- a/assets/01-html/09-forms/13-fieldset_element.html
+++ b/assets/01-html/09-forms/13-fieldset_element.html
@@ -36,9 +36,9 @@
 		<!-- name -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <i class="fab fa-html5"></i> <span class="t_blue">&lt;fieldset name="숫자"&gt;</span></h3>
-			<p class="mt_s">
-				name 속성은 <code>&lt;fieldset&gt;</code> 요소의 이름을 명시합니다.<br>
-				name 속성은 자바스크립트에서 요소를 참조하거나, 폼이 제출된 뒤 폼 데이터(form data)를 참조할 때 사용됩니다.
+			<p class="mt_ms">
+				<code>name</code> 속성은 <code>&lt;fieldset&gt;</code> 요소의 이름을 명시합니다.<br>
+				<code>name</code> 속성은 자바스크립트에서 요소를 참조하거나, 폼이 제출된 뒤 폼 데이터(form data)를 참조할 때 사용됩니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.13.fieldset_element_name.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -48,18 +48,18 @@
 		</article>
 
 		<!-- disabled -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[disabled] <i class="fab fa-html5"></i> <span class="t_blue">&lt;fieldset disabled&gt;</span></h3>
-			<p class="mt_s">
-				disabled 속성은 <code>&lt;fieldset&gt;</code> 요소에 포함된 <code>&lt;form&gt;</code> 요소들이 비활성화됨을 명시합니다.<br>
-				disabled 속성이 명시된 <code>&lt;fieldset&gt;</code> 요소에 포함된 모든 요소들은 사용할 수 없으며 사용자가 클릭할 수도 없습니다.<br>
+			<p class="mt_ms">
+				<code>disabled</code> 속성은 <code>&lt;fieldset&gt;</code> 요소에 포함된 <code>&lt;form&gt;</code> 요소들이 비활성화됨을 명시합니다.<br>
+				<code>disabled</code> 속성이 명시된 <code>&lt;fieldset&gt;</code> 요소에 포함된 모든 요소들은 사용할 수 없으며 사용자가 클릭할 수도 없습니다.<br>
 				따라서 이 속성을 사용하면 특정 조건이 충족될 때까지 사용자가 <code>&lt;fieldset&gt;</code> 요소에 포함된 요소들을 클릭할 수 없도록 설정하고,
 				특정 조건이 충족되면 자바스크립트 등으로 disabled 속성값을 삭제하여 사용자가 다시 요소들을 사용할 수 있도록 조정할 수 있습니다.
 			</p>
 			<p class="mt_s">
-				disabled 속성은 불리언(boolean) 속성입니다.<br>
+				<code>disabled</code> 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.<br>
-				엣지 브라우저의 경우 중첩된 <code>&lt;fieldset&gt;</code> 요소에서는 disabled 속성이 제대로 적용되지 않습니다.<br>
+				엣지 브라우저의 경우 중첩된 <code>&lt;fieldset&gt;</code> 요소에서는 <code>disabled</code> 속성이 제대로 적용되지 않습니다.<br>
 				<code>&lt;fieldset disabled&gt;&lt;fieldset&gt;&lt;!-- 여전히 사용할 수 있습니다. --&gt;&lt;/fieldset&gt;&lt;/fieldset&gt;</code>
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.13.fieldset_element_disabled.html">
@@ -70,9 +70,9 @@
 		</article>
 
 		<!-- form -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;fieldset form="form id"&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>&lt;fieldset&gt;</code> 요소에 포함될 <code>&lt;form&gt;</code> 요소의 id를 명시합니다.<br>
 				이 속성값은 반드시 같은 문서 내에 존재하는<br>
 				요소의 id 속성값이어야 합니다.
