--- a/assets/01-html/11-models/models.html
+++ b/assets/01-html/11-models/models.html
@@ -99,18 +99,21 @@
 		<p>몇몇 요소들은 특정 요소만의 독특한 요구사항을 가지고 있으며, 어느 카테고리에도 속하지 않습니다.</p>
 	</blockquote>
 
-	<section class="txt_ex">
-		<h2 class="sound_only">컨텐츠 모델 상세설명</h2>
+	<section class="txt_ex mt_xxl">
+		<!--<h2 class="sound_only">컨텐츠 모델 상세설명</h2>-->
+		<h2>컨텐츠 모델 상세설명</h2>
 
 		<!-- 플로우 콘텐츠 -->
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">플로우 콘텐츠 <span class="t_blue">(Flow Content)</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				문서 및 어플리케이션의 Body에서 사용되는 대부분의 요소는 플로우 콘텐츠로 분류됩니다.
 			</p>
 			<div class="line_code mt_s">
 				<p>
-					a, abbr, address, area(map 요소의 자식 요소인 경우), article, aside, audio, b, bdi, bdo, blockquote, br, button, canvas, cite, code, command, datalist, del, details, dfn, div, dl, em, embed, fieldset, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, hr, i, iframe, img, input, ins, kbd, keygen, label, map, mark, math, menu, meter, nav, noscript, object, ol, output, p, pre, progress, q, ruby, s, samp, script, section, select, small, span, strong, style(scoped 속성이 있으면), sub, sup, svg, table, textarea, time, ul, var, video, wbr, text
+					<code>
+						a, abbr, address, area(map 요소의 자식 요소인 경우), article, aside, audio, b, bdi, bdo, blockquote, br, button, canvas, cite, code, command, datalist, del, details, dfn, div, dl, em, embed, fieldset, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, hr, i, iframe, img, input, ins, kbd, keygen, label, map, mark, math, menu, meter, nav, noscript, object, ol, output, p, pre, progress, q, ruby, s, samp, script, section, select, small, span, strong, style(scoped 속성이 있으면), sub, sup, svg, table, textarea, time, ul, var, video, wbr, text
+					</code>
 				</p>
 			</div>
 			<div class="ol_lst indent mt_s">
@@ -126,46 +129,46 @@
 		</article>
 
 		<!-- 메타데이터 콘텐츠 -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">메타데이터 콘텐츠 <span class="t_blue">(Metadata Content)</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				웹 문서와 관련된 정보를 표현하는 콘텐츠와 다른 문서와의 관계를 유지하는 콘텐츠입니다.<br>
 				메타 데이터 콘텐츠 는 나머지 콘텐츠의 프리젠테이션 또는 동작을 설정,
 				다른 문서와 문서의 관계를 설정하거나 다른 "대역 외"정보를 전달하는 콘텐츠입니다.
 			</p>
 			<div class="line_code mt_s">
-				<p>base, link, meta, noscript, script, style, template, title</p>
+				<p><code>base, link, meta, noscript, script, style, template, title</code></p>
 			</div>
 		</article>
 
 		<!-- 섹션 콘텐츠 -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">섹션 콘텐츠 <span class="t_blue">(Section Conetnt)</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				웹 문서의 섹션 영역을 정의하는 요소입니다.<br>
 				섹션 콘텐츠는 헤딩과 푸터의 유효범위를 지정합니다.<br>
 				제목과 그 내용을 포함하는 범위를 지정합니다.
 			</p>
 			<div class="line_code mt_s">
-				<p>article, aside, nav, section</p>
+				<p><code>article, aside, nav, section</code></p>
 			</div>
 		</article>
 
 		<!-- 섹션 콘텐츠 -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">헤딩 콘텐츠 <span class="t_blue">(Heading Conetnt)</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				헤딩 콘텐츠는 섹션(섹션 콘텐츠나 또는 헤딩 콘텐츠에 의해 암시적으로 마크업 된 영역)의 헤더를 정의합니다.
 			</p>
 			<div class="line_code mt_s">
-				<p>h1, h2, h3, h4, h5, h6</p>
+				<p><code>h1, h2, h3, h4, h5, h6</code></p>
 			</div>
 		</article>
 
 		<!-- 프레이징 콘텐츠 -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">프레이징 콘텐츠 <span class="t_blue">(Phrasing Conetnt)</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				프레이징 콘텐츠는 문장과 텍스트가 관련된 요소입니다.<br>
 				프레이징 콘텐츠는 문서의 텍스트이며, 그 텍스트를 단락 내부레벨에서 마크업을 하는 요소입니다.<br>
 				프레이징 콘텐츠가 모여 문단을 구성합니다.<br>
@@ -173,15 +176,17 @@
 			</p>
 			<div class="line_code mt_s">
 				<p>
-					a(프레이징 콘텐츠만을 포함하는 경우), abbr, area(map 요소의 자식요소인 경우), audio, b, bdi, bdo, br, button, canvas, cite, code, command, datalist, del(프레이징 콘텐츠을 포함하는 경우), dfn, em, embed, i, iframe, img, input, ins(프레이징 콘텐츠만을 포함하는 경우), kbd, keygen, label, map(프레이징 콘텐츠만을 포함하는 경우), mark, math, meter, noscript, object, output, progress, q, ruby, s, samp, script, select, small, span, strong, sub, sup, svg, textarea, time, var, video, wbr, text
+					<code>
+						a(프레이징 콘텐츠만을 포함하는 경우), abbr, area(map 요소의 자식요소인 경우), audio, b, bdi, bdo, br, button, canvas, cite, code, command, datalist, del(프레이징 콘텐츠을 포함하는 경우), dfn, em, embed, i, iframe, img, input, ins(프레이징 콘텐츠만을 포함하는 경우), kbd, keygen, label, map(프레이징 콘텐츠만을 포함하는 경우), mark, math, meter, noscript, object, output, progress, q, ruby, s, samp, script, select, small, span, strong, sub, sup, svg, textarea, time, var, video, wbr, text
+					</code>
 				</p>
 			</div>
 		</article>
 
 		<!-- 임베디드 콘텐츠 -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">임베디드 콘텐츠 <span class="t_blue">(Embedded Conetnt)</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				다른 소스를 가져오거나 삽입시키는 컨텐츠와 관련된 요소입니다.<br>
 				임베디드 콘텐츠는 다른 리소스(음악, 영상 등)를 문서에 삽입하는 콘텐츠나, 문서에 삽입된 다른 형태에서 유래한 콘텐츠를 말합니다.<br>
 				HTML의 네임스페이스에 속하지 않으면서, 콘텐츠를 포함하고 있지만 메타데이터가 아닌 것들을 임베디드 콘텐츠라 합니다.(SVG등)<br>
@@ -189,30 +194,32 @@
 			</p>
 			<div class="line_code mt_s">
 				<p>
-					audio, canvas, embed, iframe, img, math, object, svg, video
+					<code>audio, canvas, embed, iframe, img, math, object, svg, video</code>
 				</p>
 			</div>
 		</article>
 
 		<!-- 인터랙티브 콘텐츠 -->
-		<article class="indent_max txt_ex mt_l">
+		<article class="indent_max txt_ex mt_xl">
 			<h3 class="ml_mn">인터랙티브 콘텐츠 <span class="t_blue">(Interactive Conetnt)</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				인터랙티브 콘텐츠는 사용자와의 상호작용을 위해 사용되는 콘텐츠입니다.
 			</p>
 			<div class="line_code mt_s">
 				<p>
-					a, audio(controls 속성이 있으면), button, details, embed, iframe, img(usemap 속성이 있으면), input(type 속성이 hidden 상태가 아니면), keygen, label, menu(type 속성이 toolbar 상태면), object(usemap 속성이 있으면), select, textarea, video(controls 속성이 있으면)
+					<code>a, audio(controls 속성이 있으면), button, details, embed, iframe, img(usemap 속성이 있으면), input(type 속성이 hidden 상태가 아니면), keygen, label, menu(type 속성이 toolbar 상태면), object(usemap 속성이 있으면), select, textarea, video(controls 속성이 있으면)</code>
 				</p>
 			</div>
 		</article>
 
-		<p class="indent mt_l t_black font-16 weight-600">위에서 언급하지 않은 요소들은 다음과 같습니다.</p>
 	</section>
+
+	<hr class="dashed_line mt_xxl">
+	<p class="mt_xxl t_black font-16 weight-600">위에서 언급하지 않은 요소들은 다음과 같습니다.</p>
 
 
 	<!-- details element -->
-	<section class="txt_ex indent_max mt_xxl">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn html5">11.1. 인터랙티브 요소 <mark>&lt;details&gt;</mark> element</h2>
 
 		<blockquote class="uk_note mt_l" role="note">
@@ -239,7 +246,7 @@
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[open] <span class="t_blue">&lt;details open&gt;</span></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				요소가 사용자에게 보이도록 펼쳐짐을 명시합니다.<br>
 				상세 정보, 즉 <code>&lt;details&gt;</code> 요소의 콘텐츠가 현재 보이는 상태인지 나타냅니다.<br>
 				기본값 false는 정보가 보이지 않는다는 뜻입니다.
